Fix runtime and layout problem

--- a/client/web/src/enterprise/app/setup/steps/AppLocalRepositoriesSetupStep.module.scss
+++ b/client/web/src/enterprise/app/setup/steps/AppLocalRepositoriesSetupStep.module.scss
@@ -39,6 +39,8 @@
 .local-repositories {
     padding: 2rem;
     background-color: var(--gray-02);
+    height: 100vh;
+    overflow: auto;
 
     &-buttons-group {
         justify-content: stretch;
